# peggy

./: .gitignore  LICENSE  README.md
assets/: tailwind.css
crates/peggy_backend/: Cargo.toml
crates/peggy_core/: Cargo.toml
crates/peggy_frontend/: Cargo.toml  Dioxus.toml  package-lock.json
crates/peggy_frontend/assets/: tailwind.css
crates/peggy_frontend/src/: main.rs
crates/peggy_frontend/src/components/: echo.rs
crates/peggy_frontend/src/views/: mod.rs  navbar.rs
src/: main.rs
src/components/: echo.rs  hero.rs
src/views/: blog.rs  navbar.rs
